# gst-rs-app

./: README.md  flake.nix
my-common/: Cargo.toml
my-common/src/: thread.rs
my-server/: Cargo.toml
my-server/src/: main.rs
my-server/src/driver/: gst.rs  mod.rs  simple.rs
